# .xmonad

./: .gitignore  .mailmap  build  cabal.project  xmwm.cabal
cmd/taffybar/: Main.hs
cmd/xmdev/: Main.hs
cmd/xmobar/: Main.hs
cmd/xmonad/: Main.hs
cmd/yeganish/: Main.hs
src/Sound/Pulse/: DBus.hs
src/Sound/Pulse/DBus/: Card.hs  Device.hs  Interfaces.hs  Internal.hs  Server.hs  Sink.hs  Source.hs
src/XMWM/: Config.hs  DBus.hs  Debug.hs  Keybindings.hs  Prompt.hs  Spawn.hs  Workspaces.hs  XMobar.hs  Yeganesh.hs
src/XMWM/Applications/: Zoom.hs
src/XMWM/DBus/: Interfaces.hs
src/XMWM/Sound/MPRIS/: DBus.hs
src/XMWM/Sound/MPRIS/DBus/: Interfaces.hs  Player.hs
src/XMWM/Sound/Pulse/: DBus.hs
src/XMWM/Sound/Pulse/DBus/: Card.hs  Device.hs  Interfaces.hs  Server.hs
