cabal-version: 3.0
name:          xmwm
synopsis:      A window manager based off of XMonad.
version:       0.0.1.0

common lang
  build-depends:
    , base    ==4.17.2.1
    , relude  ==1.2.1.0

  default-language:   GHC2021
  default-extensions:
    Arrows
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    LambdaCase
    NoImplicitPrelude
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    QuasiQuotes
    RecordWildCards
    StrictData
    TemplateHaskell
    TypeFamilies

  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wcompat
    -Wincomplete-record-updates -Wmissing-home-modules
    -Wmissing-export-lists -Wredundant-constraints

library
  import:          lang
  hs-source-dirs:  src

  -- cabal-fmt: expand src
  exposed-modules:
    XMWM.Applications.Zoom
    XMWM.Config
    XMWM.DBus
    XMWM.DBus.Interfaces
    XMWM.Debug
    XMWM.Keybindings
    XMWM.Prompt
    XMWM.Sound.MPRIS.DBus
    XMWM.Sound.MPRIS.DBus.Interfaces
    XMWM.Sound.MPRIS.DBus.Player
    XMWM.Sound.Pulse.DBus
    XMWM.Sound.Pulse.DBus.Card
    XMWM.Sound.Pulse.DBus.Device
    XMWM.Sound.Pulse.DBus.Interfaces
    XMWM.Sound.Pulse.DBus.Server
    XMWM.Spawn
    XMWM.Workspaces
    XMWM.XMobar

  build-depends:
    , data-default     ==0.7.1.1
    , dbus             ==1.3.5
    , monad-control    ==1.0.3.1
    , mtl
    , safe-exceptions  ==0.1.7.4
    , X11              ==1.10.3
    , xmonad           ==0.18.0
    , xmonad-contrib   ==0.18.0

test-suite tests
  import:             lang
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Main.hs

  -- cabal-fmt: expand test -Main
  other-modules:
  build-tool-depends: hspec-discover:hspec-discover ==2.10.0.1
  build-depends:
    , hspec  ==2.10.0.1
    , xmwm

executable xmonad
  import:         lang
  hs-source-dirs: cmd/xmonad
  main-is:        Main.hs
  build-depends:
    , xmonad          ==0.18.0
    , xmonad-contrib  ==0.18.0
    , xmwm

executable xmobar
  import:         lang
  hs-source-dirs: cmd/xmobar
  main-is:        Main.hs
  build-depends:
    , directory
    , process
    , xmobar     ==0.46

  ghc-options:    -threaded
