cabal-version: 3.0
name: xmwm
synopsis: A window manager based off of XMonad.
version: 0.0.1.0

common lang
  build-depends:
    base ==4.18.3.0,
    relude ==1.2.1.0,

  default-language: GHC2021
  default-extensions:
    Arrows
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    LambdaCase
    NoImplicitPrelude
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    QuasiQuotes
    RecordWildCards
    StrictData
    TemplateHaskell
    TypeFamilies

  ghc-options:
    -Wall
    -Wincomplete-uni-patterns
    -Wcompat
    -Wincomplete-record-updates
    -Wmissing-home-modules
    -Wmissing-export-lists
    -Wredundant-constraints

library
  import: lang
  hs-source-dirs: src
  -- cabal-gild: discover src
  exposed-modules:
    XMWM.Applications.Zoom
    XMWM.Config
    XMWM.DBus
    XMWM.DBus.Interfaces
    XMWM.Debug
    XMWM.Keybindings
    XMWM.Prompt
    XMWM.Sound.MPRIS.DBus
    XMWM.Sound.MPRIS.DBus.Interfaces
    XMWM.Sound.MPRIS.DBus.Player
    XMWM.Sound.Pulse.DBus
    XMWM.Sound.Pulse.DBus.Card
    XMWM.Sound.Pulse.DBus.Device
    XMWM.Sound.Pulse.DBus.Interfaces
    XMWM.Sound.Pulse.DBus.Server
    XMWM.Spawn
    XMWM.Workspaces
    XMWM.XMobar

  build-depends:
    X11 ==1.10.3,
    data-default ==0.8.0.1,
    dbus ==1.4.0,
    monad-control ==1.0.3.1,
    mtl,
    safe-exceptions ==0.1.7.4,
    xmonad ==0.18.0,
    xmonad-contrib ==0.18.1,

test-suite tests
  import: lang
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-tool-depends: hspec-discover:hspec-discover ==2.10.0.1
  build-depends:
    hspec ==2.10.0.1,
    xmwm,

executable xmonad
  import: lang
  hs-source-dirs: cmd/xmonad
  main-is: Main.hs
  build-depends:
    xmonad ==0.18.0,
    xmonad-contrib ==0.18.1,
    xmwm,

executable xmobar
  import: lang
  hs-source-dirs: cmd/xmobar
  main-is: Main.hs
  build-depends:
    directory,
    process,
    xmobar ==0.49,

  ghc-options: -threaded

executable yeganish
  import: lang
  hs-source-dirs: cmd/yeganish
  main-is: Main.hs
  build-depends:
    mtl,
    path ==0.9.6,
    path-io ==1.8.2,
    process,
    xmwm,

  ghc-options: -threaded
